# CW_4

./: README.md  pyproject.toml  vacancy_api.py
api/: hh_vacancy_api.py  parser.py  super_job_vacancy_api.py
app/: job_parser.py
file_saver/: json_saver.py
models/: vacancy.py
